# Music_Board

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  deploy.bat  slika.qrc  teme.qrc  zvukovi.qrc
demo/: Accordion1.matrix  Test1.matrix
headers/: utils.cpp  utils.h  utlis.cpp  utlis.cpp.autosave  utlis.h  utlis.h.autosave
specifikacija/: dijagram slucaja.drawio  dijagram slucaja.drawio.xml  dijagram_implementiranih_klasa.vpd  dijagram_klasa.drawio  dijagram_komponenti.drawio  dijagram_sekvence_brisanja_zvuka_sa_tastera.drawio  dijagram_sekvence_cuvanje_matrice_na_disk.drawio  dijagram_sekvence_mapiranje_zvuka_na_tastere.drawio  dijagram_slucaja.drawio  opis_brisanja_zvuka_sa_tastera.txt  opis_cuvanje_matrice_na_disk.txt  opis_mapiranje_zvuka_na_tastere.txt  opis_menjanje_svojstva_zvuka.txt  opis_reprodukcija_matrice.txt
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrix.cpp  matrix.h  matrixplayer.cpp  matrixplayer.h  playerthread.cpp  playerthread.h  recorder.cpp  recorder.h  sound.cpp  sound.h  soundbank.cpp  soundbank.h  soundbutton.cpp  soundbutton.h  soundplayer.cpp  soundplayer.h  timeline.cpp  timeline.h  timelinemark.cpp  timelinemark.h
src/teme/: Darkeum.qss  MatfTheme.qss  SyNet.qss
src/test/matrix/: CMakeLists.txt  tst_matrix.cpp  tst_matrix.cpp~RF864b8ef.TMP
tests/: CMakeLists.txt  catch2_main.cpp  matrix.cpp  soundbank.cpp  test_recorder.cpp  test_sound.cpp  test_timelinemark.cpp
